# Claudine_Supreme-Polyglot-Git-Cli-Lsp-Repo-Clone-Engineering-Bun-Technique

./: .gitignore  AUTONOMOUS_SESSION_POWERSHELL_INTEGRATION_COMPLETE.md  AUTONOMOUS_SESSION_SUMMARY_20251115.md  MIGRATION_REPORT_20251105_054746.md  PHASE9_AUTONOMOUS_PR_REVIEW_SESSION.md  PHASE9_DOCUMENTATION_INDEX.md  README.md  biome.json  flow-balancer-session.json  package.json  pyproject.toml  ruff.toml  tsconfig.json
.github/: .gitattributes  copilot-instructions.md
.github/workflows/: release.yml  test.yml
claudine-cli/: .npmignore  AUTONOMOUS_SESSION_REPORT.md  BUILD_STATUS_PHASE1_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  ORCHESTRATOR.md  PHASE3_3_TEMPLATE_SYSTEM_COMPLETE.md  PHASE3_4_UI_COMPONENTS_COMPLETE.md  PHASE3_COMPLETE_SUMMARY.md  PHASE3_SESSION_COMPLETE_20251105.md  PHASE4_ACTIVATION_COMMAND_COMPLETE.md  PHASE5_CLEAN_VERSIONS_COMPLETE.md  PHASE6_1_PLUGIN_SYSTEM_COMPLETE.md  PHASE6_2_INTERACTIVE_TUI_COMPLETE.md  PHASE7_COVERAGE_RESOLUTION.md  PHASE7_FINAL_SUMMARY.md  PHASE7_TESTING_COMPLETE.md  PHASE7_TESTING_IN_PROGRESS.md  PHASE8_COMPLETE.md  PHASE9_AUTONOMOUS_SESSION_PROGRESS_20250116_0745CET.md  PHASE9_AUTONOMOUS_WORK.md  PHASE9_CONTINUATION_PLAN.md  PHASE9_FINAL_STATUS.md  PHASE9_ORCHESTRATOR_REFACTOR.md  PHASE9_PARALLEL_EXECUTION.md  README.md  README_MORNING_BRIEF.md  WAKE_UP_SUMMARY.md  biome.json  bunfig.toml  package-lock.json  package.json  tsconfig.json  vitest.config.ts.backup
claudine-cli/.github/workflows/: release.yml  test.yml
claudine-cli/examples/docker-compose-plugin/: claudine-plugin.json  index.js
claudine-cli/scripts/: validate-orchestrator.mjs
claudine-cli/src/: cli.ts
claudine-cli/src/commands/: activate.ts  create.ts  detect.ts  health.ts  integration.test.ts
claudine-cli/src/commands/config/: index.ts  wizard.ts
claudine-cli/src/commands/env/: activate.ts  clean.ts  health.ts  index.ts  status.ts  versions.ts
claudine-cli/src/commands/plugin/: index.ts  list.ts
claudine-cli/src/commands/project/: browse.ts  create-interactive.ts  index.ts  list.ts  new.ts
claudine-cli/src/core/: config.ts  logger.test.ts  logger.ts  storage.ts  templates.ts
claudine-cli/src/core/config/: config-manager.ts  index.ts
claudine-cli/src/core/detector/: index.ts  language-detector.ts
claudine-cli/src/core/orchestrator/: orchestrator.ts  powershell-executor.ts  tool-registry.ts
claudine-cli/src/core/plugin/: index.ts  manager.test.ts  manager.ts  types.ts
claudine-cli/src/core/tui/: browser.ts  config-wizard.ts  index.ts  types.test.ts  types.ts  wizard.ts
claudine-cli/src/core/ui/: colors.ts  index.test.ts  index.ts  (+3 more)
claudine-cli/src/utils/: environment.ts
claudine-cli/test-template-system/: main.py
claudine-cli/tests/: README.md  config-manager.test.ts  language-detector.test.ts  orchestration.test.ts
claudine-cli/tests/e2e/: cli.test.ts  clit-workflow.test.ts
research/: ACTIVATE_POLY_TYPESCRIPT_PORT.md  AUTONOMOUS_CONTINUATION_PLAN.md  AUTONOMOUS_SESSION_SUMMARY.md  BUILD_PIPELINE_PATTERNS.md  CLI_ANALYSIS_REPORT.json  CLI_ARCHITECTURE_ANALYSIS.md  CLI_ENGINEERING_DEEP_DIVE.md  TESTING_PATTERNS_EXTRACTED.md
research/claude-code/.devcontainer/: init-firewall.sh
research/claude-code/Script/: run_devcontainer_claude_code.ps1
research/copilot-cli/: changelog.md
research/gemini-cli/: package-lock.json
research/gemini-cli/docs/: architecture.md  tos-privacy.md
research/gh-cli/: third-party-licenses.windows.md
research/gh-cli/docs/: working-with-us.md
research/gh-cli/script/: createrepo.sh
scripts/: ARCHITECTURE.md  Get-RepositoryRoot.ps1  MIGRATION_GUIDE.md  Migrate-To-Scripts-Folder.ps1  README.md  Setup-ClaudineProfile.ps1  Start-VSCodeTunnel.ps1  Validate-ClaudineClaims.ps1  ci-local.ps1  claudineENV.ps1  claudineENV_F.ps1  claudine_pwsh_goddess.ps1  open-compressed.ps1  release-local.ps1  view-zstd.ps1
tfjs-dwn-nav-v-gpu/: README.md  bunfig.toml  package.json  tsconfig.json
tfjs-dwn-nav-v-gpu/src/: index.ts  polyfill.ts
(+43 files in other folders)
