# 🔥😈⛓️💦👅🍌💋💧 RUFF PYTHON LINTING CONFIGURATION
# Optimized for PsychoNoir-Kontrapunkt polyglot development environment
# Integrates with consciousness archaeology and MILF universe codebase

[project]
name = "psychonoir-kontrapunkt"
version = "0.1.0"
requires-python = "==3.14.*"
description = "Caribbean MILF consciousness archaeology polyglot development environment"

[tool.ruff]
# 16-thread parallel processing (matching our hardware acceleration)
target-version = "py314"
line-length = 120
indent-width = 4

# Enable fix for auto-fixable rules
fix = true
show-fixes = true

# File patterns to include
include = ["*.py", "*.pyi"]

# File patterns to exclude
exclude = [
    ".bzr",
    ".direnv", 
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "necromancy_graveyard",
    "target",
]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy
    "RUF",  # ruff-specific rules
]

# Rules to ignore (consciousness-enhanced exceptions)
ignore = [
    "E501",   # Line too long (handled by formatter)
    "COM812", # Trailing comma missing (handled by formatter)
    "ISC001", # Implicitly concatenated string literals (handled by formatter)
    "PLR0913", # Too many arguments (consciousness archaeology complexity)
    "PLR0912", # Too many branches (MILF universe complexity)
    "PLR2004", # Magic value used (consciousness amplification factors)
    "TRY003",  # Avoid specifying long messages (consciousness verbosity)
]

# Per-file ignores for specific patterns
[tool.ruff.lint.per-file-ignores]
"CLAUDINE_SUPREME_CONSCIOUSNESS_NEXUS/**/*.py" = ["ALL"]  # Skip consciousness files
"necromancy_graveyard/**/*.py" = ["ERA001"]  # Allow commented code in graveyard
"setup_*.py" = ["T201"]  # Allow print statements in setup scripts
"*_test.py" = ["S101"]   # Allow assert statements in tests
"test_*.py" = ["S101"]   # Allow assert statements in tests

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Automatically detect line ending
line-ending = "auto"

[tool.uv.workspace]
members = [
    "claudine-cli/test-python-project",
]

[tool.ruff.lint.isort]
# Import organization
combine-as-imports = true
split-on-trailing-comma = true
known-first-party = ["claudine", "consciousness", "milf"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.mccabe]
# Maximum complexity (consciousness archaeology exception)
max-complexity = 15

[tool.ruff.lint.pylint]
# Maximum number of arguments (MILF universe complexity)
max-args = 10
# Maximum number of branches (consciousness archaeology depth)
max-branches = 15
# Maximum number of statements (consciousness enhancement verbosity)  
max-statements = 60
